# sth-like-irc

./: CMakeCache.txt  README.md  build.sh  message_pattern.txt
client/: CMakeCache.txt  CMakeLists.txt  connectdialog.cpp  connectdialog.h  connectdialog.ui  corecommunicator.cpp  corecommunicator.h  keyenterreceiver.cpp  keyenterreceiver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeCache.txt  CMakeLists.txt  SthLikeIrcServer.cbp  cmake_install.cmake  rooms.ini  users.ini
server/src/: main.cpp
server/src/core/: Configuration.cpp  Configuration.h  ServerSession.cpp  ServerSession.h  ServerSessionManager.cpp  ServerSessionManager.h
server/src/exceptions/: InitServerError.cpp  InitServerError.h  InternalError.cpp  InternalError.h  ParsingError.cpp  ParsingError.h
server/src/models/: Message.cpp  Message.h  MessageType.h  Response.h  Room.cpp  Room.h  User.cpp  User.h  UserStatus.h
server/src/repository/: Repository.h  RoomRepository.cpp  RoomRepository.h  UserRepository.cpp  UserRepository.h
server/src/utils/: ConfigurationParser.cpp  ConfigurationParser.h  MessageParser.cpp  MessageParser.h  Parser.h  RoomRepositoryParser.cpp  RoomRepositoryParser.h  UserParser.cpp  UserParser.h  UserRepositoryParser.cpp  UserRepositoryParser.h
