# CMAKE_MINIMUM_REQUIRED_VERSION(VERSION 3.19)
cmake_minimum_required(VERSION 3.19)
project(SthLikeIrcServer)
add_executable(SthLikeIrcServer src/main.cpp src/models/User.cpp src/models/User.h src/models/UserStatus.h src/models/Message.cpp src/models/Message.h src/models/Room.cpp src/models/Room.h src/core/ServerSessionManager.cpp src/core/ServerSessionManager.h src/core/ServerSession.cpp src/core/ServerSession.h src/core/Configuration.cpp src/core/Configuration.h src/utils/MessageParser.cpp src/utils/MessageParser.h src/repository/UserRepository.cpp src/repository/UserRepository.h src/repository/RoomRepository.cpp src/repository/RoomRepository.h src/utils/ConfigurationParser.cpp src/utils/ConfigurationParser.h src/utils/Parser.h src/repository/Repository.h src/exceptions/ParsingError.cpp src/exceptions/ParsingError.h src/utils/UserRepositoryParser.cpp src/utils/UserRepositoryParser.h src/utils/RoomRepositoryParser.cpp src/utils/RoomRepositoryParser.h src/exceptions/InitServerError.cpp src/exceptions/InitServerError.h)